# 2024

./: README.md
COS214/ass/: CMakeLists.txt  makefile
COS214/ass/.github/workflows/: cmake-single-platform.yml
COS214/ass/src/: Game.cpp  Game.h  resources.h
COS214/ass/src/Buildings/: BuildDecorEconomic.cpp  BuildDecorEconomic.h  BuildDecorRepair.h  BuildDecorUpgrade.cpp  Building.cpp  Building.h  BuildingDecorator.cpp  BuildingDecorator.h  BuildingRequirements.cpp  ComMall.cpp  ComMall.h  ComOffice.cpp  ComOffice.h  ComShop.cpp  ComShop.h  Commercial.cpp  Commercial.h  FactCommercial.cpp  FactLandmarks.cpp  FactLandmarks.h  FactService.h  IndFactory.cpp  IndFactory.h  IndPlant.cpp  IndPlant.h  IndWarehouse.cpp  IndWarehouse.h  Industrial.h  LandCCenter.cpp  LandCCenter.h  LandMark.cpp  LandMonument.cpp  LandMonument.h  LandPark.cpp  LandPark.h  Landmark.h  ResEstate.cpp  ResEstate.h  ResFlat.cpp  ResFlat.h  (+16 more)
COS214/ass/src/Citizens/: Citizen.cpp  Citizen.h  CitizenNameGen.cpp  CitizenState.h  CitizensIncludes.h  CityBlock.cpp  CityCentralMediator.cpp  CityCentralMediator.h  CityMediator.h
COS214/ass/src/Citizens/CitizenStates/: CitizenStatesIncludes.h  Content.cpp  Content.h  Happy.cpp  (+5 more)
COS214/ass/src/Government+Tax/: AllocateTaxCommand.cpp  CitizenTaxAB.cpp  CityStructure.cpp  CityStructure.h  CollectTaxCommand.cpp  CollectTaxCommand.h  Government.cpp  Government.h  HealthPolicy.h  InfrastructureBudgetPolicy.cpp  InfrastructurePolicy.cpp  Main  Policy.h  SetTaxRateCommand.cpp  SetTaxRateCommand.h  TaxAllocationHandler.cpp  TaxCollectionHandler.cpp  TaxCommand.h  TaxManager.cpp  TaxManager.h  TaxRateHandler.cpp  TaxRateHandler.h  makefile
COS214/ass/src/Transport/: RoadComponent.cpp  RoadIterator.h  Trainstation.cpp  Trainstation.h  TransportInclude.h  main.cpp  makefile
COS214/ass/src/Utilities/: Main.cppZone.Identifier  UtilPowerPlants.cpp  UtilSewageSyst.cpp  UtilSewageSyst.h  UtilWasteMan.cpp  UtilWaterSupplly.cpp  UtilWaterSupply.h  UtilityManager.h
COS214/ass/tests/: basic_transportation.cpp  bus_tests.cpp  citizen_destructor.cpp  population_growth.cpp  test_buildings.cpp  train_tests.cpp  unit_building.cpp  unit_decorator.cpp  unit_government.cpp  unit_residential.cpp  utilities_test.cpp
(+1404 files in other folders)
